<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/gray">
	<EditText
		android:layout_height="wrap_content"
		android:id="@+id/editText1"
		android:text="@string/empty_string"
		android:inputType="number"
		android:layout_width="match_parent"></EditText>
	<RadioGroup
		android:id="@+id/radioGroup1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/radio0"
			android:layout_width="wrap_content"
			android:checked="true"
			android:text="@string/backlight"></RadioButton>
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/radio4"
			android:layout_width="wrap_content"
			android:text="@string/Grey_scale"></RadioButton>
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/radio1"
			android:layout_width="wrap_content"
			android:text="@string/red"></RadioButton>
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/radio2"
			android:layout_width="wrap_content"
			android:text="@string/green"></RadioButton>
		<RadioButton
			android:layout_height="wrap_content"
			android:id="@+id/radio3"
			android:layout_width="wrap_content"
			android:text="@string/blue"></RadioButton>
	</RadioGroup>
	<Button
		android:layout_height="wrap_content"
		android:id="@+id/button2"
		android:layout_width="match_parent"
		android:text="@string/fullscreen"
		android:onClick="enterFullScreenMode"></Button>
	<Button
		android:id="@+id/button1"
		android:onClick="changeBackgroundBacklight"
		android:layout_height="match_parent"
		android:background="@color/gray"
		android:text="@string/x_center_enterprise"
		android:layout_width="match_parent"></Button>
</LinearLayout>
